--- a/dynamic programming/max_sum_subarray.ipynb
+++ b/dynamic programming/max_sum_subarray.ipynb
@@ -17,9 +17,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "3\n",
+      "4\n",
+      "7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def max_subarray(arr):\n",
     "    \"\"\"\n",
@@ -30,9 +51,13 @@
     "    max_sum_total = arr[0]\n",
     "    for num in arr[1:]:\n",
     "        max_sum = max(max_sum + num, num)\n",
+    "        print(max_sum)\n",
     "        max_sum_total = max(max_sum, max_sum_total)\n",
+    "        \n",
     "    return max_sum_total\n",
-    "\n"
+    "\n",
+    "\n",
+    "max_subarray([2, 4, -3, 1, 3])"
    ]
   },
   {
