--- a/misc.ipynb
+++ b/misc.ipynb
@@ -1053,7 +1053,7 @@
     "def single(nums):\n",
     "    out = 0\n",
     "    for num in nums:\n",
-    "        out = out ^ num\n",
+    "        out = out ^http://localhost:8888/notebooks/algorithm/misc.ipynb# num\n",
     "    return out\n",
     "single([2, 4, 2, 3, 4])"
    ]
