--- a/graph.ipynb
+++ b/graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "defaultdict(set, {0: {1, 2}, 1: {2}, 2: {0, 3}, 3: {3}})"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,30 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "queue [0, 3]\n",
-      "0\n",
-      "queue [3, 1]\n",
-      "3\n",
-      "queue [1]\n",
-      "1\n",
-      "queue []\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "{0, 1, 2, 3}"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,17 +92,57 @@
     "# trick 3, use queue, pop(0) or deque popleft()\n",
     "def bfs(graph, start):\n",
     "    visited = set()\n",
+    "    out = []\n",
     "    queue = []\n",
     "    queue.append(start)\n",
     "    visited.add(start)\n",
     "    while queue:\n",
     "        vertex = queue.pop(0)\n",
-    "        print(vertex)\n",
     "        for neighbor in graph[vertex]:\n",
     "            if neighbor not in visited:\n",
     "                visited.add(neighbor)\n",
+    "                out.append(neighbor)\n",
     "                queue.append(neighbor)\n",
-    "        print('queue', queue)\n",
+    "    return visited\n",
+    "bfs(g.graph, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "3\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 3}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bfs(graph, start):\n",
+    "    visited = set()\n",
+    "    queue = [start]\n",
+    "    while queue:\n",
+    "        vertex = queue.pop(0)\n",
+    "        visited.add(vertex)\n",
+    "        print(vertex)\n",
+    "        for neighbor in graph[vertex] - visited:\n",
+    "            queue.append(neighbor)\n",
     "    return visited\n",
     "bfs(g.graph, 2)"
    ]
